# rocon_ensemble

./: .cproject  .project  CMakeLists.txt  README.md  package.xml
annotations_store/: CMakeLists.txt  package.xml
annotations_store/include/annotations_store/: annotations_manager.hpp
annotations_store/src/: annotations_manager_node.cpp
annotations_store/src/annotations_manager/: annotations_manager.cpp  single_savers.cpp
include/annotations_store/: annotations_manager.hpp
launch/: map_store.launch
rocon_annotations/: .cproject  .project  CMakeLists.txt  README.md  package.xml
rocon_ensemble/: .cproject  CMakeLists.txt  package.xml
src/: annotations_manager.cpp  annotations_manager_node.cpp  annotations_saver.cpp
srv/: DeleteAnnotations.srv  PublishAnnotations.srv  SaveAnnotations.srv
