<?xml version="1.0"?>
<package>
  <name>rocon_ensemble</name>
  <version>0.1.0</version>
  <description>
    Software clients for the rocon concert.    
  </description>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/rocon_ensemble</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_ensemble</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_ensemble/issues</url>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <author email="d.stonier@gmail.com">Jorge Santos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>rocon_annotations</run_depend> -->
  
  <export>
    <metapackage/>
  </export>
</package>

